--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 :root{
-    --verde-clarito: #D7E9B9;
-    --amarillo-claro: #FFFBAC;
+    --verde-clarito: #c9e6a5;
+    --amarillo-claro: #f0b81d;
     --naranja-claro: #FFD495;
-    --rojo-claro: #a01ff6;
+    --rojo-claro: #168881;
     --sm: 14px;
     --md: 16px;
     --lg: 18px
@@ -106,6 +106,25 @@ nav img {
     .desktop-menu{
         display: none;
     }
+    .produc-detail{
+        width: 100%;
+    }
+    .cards-container{
+        display: grid;
+        grid-template-columns: repeat(auto-fill, 240px);
+        gap: 26px;
+        place-content: center;
+        margin-top: 20px;
+    }
+    .product-card{
+        width: 140px;
+
+    }
+    .product-card img {
+        width: 140px;
+        height: 140px;
+        
+    }
 
 }
 @media (min-width:641px){
@@ -191,3 +210,256 @@ nav img {
 .mobile-menu ul:nth-child(3) {
     margin-top: 150px;
 }
+/* despliegue del carrito */
+.produc-detail{
+    background: var(--amarillo-claro);
+    width: 360px;                     
+    padding: 0px 24px;
+    box-sizing: border-box;
+    position: absolute;
+    right: 0;
+    
+}
+.primary-button{
+background-color: var(--rojo-claro);
+border-radius: 8px;
+border:none;
+cursor: pointer;
+font-size: var(--sm);
+font-weight:bold ;
+width: 100%;
+height: 40px;            
+}
+.add-to-cart-button{
+  display: flex;  
+  align-items: center;
+  justify-content: center;
+}
+.img-product{
+    height: 360px;
+    width: 360px;
+    object-fit: cover;
+    border-radius: 0 0 20px 20px;
+}
+.add-to-cart{
+    height: 20px;
+    width: 20px;
+    object-fit: cover; 
+}
+.close{
+    height: 20px;
+    width: 20px;
+    object-fit: cover;
+
+}
+.product-info{
+    margin: 24px 24px 0 24px;   
+}
+.product-info p:nth-child(1){
+    font-weight: bold;
+    font-size: var(--md);
+    margin-top: 0;
+    margin-bottom: 4px; 
+}
+.product-info p:nth-child(2){
+    color: black;
+    font-weight: bold;
+    font-size: var(--md);
+    margin-top: 0;
+    margin-bottom: 36px; 
+}
+.product-info p:nth-child(3){
+    color: var(--rojo-claro);
+    Font-size: var(--SM);
+    margin-top: 0;
+    margin-bottom: 36px; 
+}
+.my-order{
+    width: 100%;
+    height: 100vh;
+    display: grid;
+    place-items: center;
+
+}
+.title{
+    font-size: var(--lg);
+    margin-bottom: 40px;
+}
+.my-order-container{
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    width: 300px;
+}
+.my-order-content{
+    display:flex;
+    flex-direction: column;
+    
+}
+.shopping-cart{
+    display: grid;
+    grid-template-columns: auto 1fr auto auto ;
+    gap: 16px;
+    margin-bottom: 24px;
+    align-items: center;
+
+}
+.shopping-cart figure {
+    margin: 0;
+
+}
+.shopping-cart figure img{
+    width: 70px;
+    height: 70px;
+    border-radius: 20px;
+    object-fit: cover;
+}
+.shopping-cart p:nth-child(2){
+   color: var(--rojo-claro);
+}
+.shopping-cart p:nth-child(3){
+   font-size: var(--md);
+   font-weight: bold;
+}
+.order{
+    display: grid;
+    grid-template-columns: auto 1fr;
+    gap:16px;
+    align-items: center;
+    background-color:var(--rojo-claro);
+    margin-bottom: 24px;
+    border-radius: 8px;
+    padding: 0 24px;
+}
+.order p:nth-child(1){
+    display: flex;
+    flex-direction: column;
+}
+.order p span :nth-child(1){
+    font-size: var(--md);
+    font-weight: bold;
+
+}
+
+.order p:nth-child(2){
+   text-align: end;
+   font-weight: 500;
+}
+.title{
+    font-size: var(--lg);
+    font-weight: bold;
+
+}
+.title-container{
+    display: flex;
+    align-items: end;
+}
+.title-container img{
+    margin-right: 14px;
+    margin-bottom: auto;
+    transform: rotate(90deg);
+    width: 35px;
+    margin-top: 10px;
+
+
+}
+/*cards products*/
+.login{
+    width: 100%;
+    height: 100vh;
+    display: grid;
+    place-items:center;
+   }
+   .form-container {
+    display: grid;
+    grid-template-rows: auto 1fr auto ;
+    width: 300px;
+   }  
+   
+   .title{
+     font-size: var(--lg);
+     margin-bottom: 30px;
+     text-align: start;
+
+
+   }
+  
+   .form{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    
+   }
+   .form div {
+    display: flex;
+    flex-direction: column;
+   }
+   .label{
+    font-size: var(--sm);
+    font-weight: bold;
+    margin-bottom: 4px;
+
+   }
+   .secondary-button {
+    background-color: var(--verde-clarito);
+    border-radius: 8px;
+    border:none;
+    cursor: pointer;
+    font-size: var(--sm);
+    font-weight:bold ;
+    height: 40px;
+        
+  }
+  .value {
+    color:var(--rojo-claro);
+    font-size: var(--lg);
+    margin-bottom: 20px;
+  }
+  .cards-container{
+    display: grid;
+    grid-template-columns:repeat(auto-fill,240px);
+    gap: 26px;
+    place-content: center;
+    
+    
+  }
+  .product-card{
+    width: 240px;
+    background:var(--verde-clarito);
+    border-radius: 20px;
+
+  }
+  .product-card img {
+    width: 240px;
+    height: 340px;
+    border-radius: 20px;
+    object-fit: cover;
+  }
+  .product-info{
+    display: flex;
+    justify-content: space-between;   
+    align-items: center;
+    margin-top: 12px;
+
+  }
+  .product-info figure {
+    margin: 0;
+  }
+  .product-info figure img{
+    width: 35px;
+    height: 35px;
+  }
+  .product-info div p:nth-child(1){
+    font-weight: bold;
+    font-size: var(--md);
+    margin-top: 0px;
+    margin-bottom: 4px;
+  }
+  .product-info div p:nth-child(2){
+    
+    font-size: var(--sm);
+    margin-top: 0px;
+    margin-bottom: 0px;
+    color: var(--rojo-claro);
+  }
+
+
